redis/03thunder.tf
resource "aws_instance" "redis-thunder" {
  connection {
    user = "ubuntu"
    key_file = "${var.key_path}"
  }
  tags {
    Name = "redis-thunder"
  }
  ami = "${lookup(var.aws_amis, var.aws_region)}"
  key_name = "${var.key_name}"
  instance_type = "${var.instance_type}"
  ebs_optimized = false
  subnet_id = "${var.subnets.subnet1_id}"
  associate_public_ip_address = "true"
  security_groups = ["${aws_security_group.WebserverAdmin.id}","${aws_security_group.Webserver.id}","${aws_security_group.WebserverClient.id}"]
  iam_instance_profile = "CodeDeploy-InstanceRole"

  #ebs_block_device {
  #    device_name = "/dev/xvdf"
  #    volume_type = "gp2"
  #    volume_size = "50"
  #    delete_on_termination = 1 }

#change hostname
  provisioner "file" {
        source = "scripts/change-hostname.sh"
        destination = "/home/ubuntu/change-hostname.sh"
    }

  provisioner "remote-exec" {
    inline = [
        "sudo sh /home/ubuntu/change-hostname.sh redis-thunder",
        "sudo rm /home/ubuntu/change-hostname.sh",
    ]
  }

#install and configure redis
  provisioner "file" {
        source = "scripts/install-redis.sh"
        destination = "/home/ubuntu/install-redis.sh"
    }

  provisioner "remote-exec" {
    inline = [
        "sh /home/ubuntu/install-redis.sh",
    ]
  }

}
